# ofastlylog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  package.yml
ofastlylog/: cli.py  services.py
ofastlylog/services/: __init__.py  base.py  nominatim.py  tile.py  website.py
