[project]
name = "ofastlylog"
dynamic = ["version"]
description = "Process fastly OSM logs"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11, <4"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyathena",
    "PyAthena[Pandas]",
    "typer>=0.24.0",
]

[project.scripts]
ofastlylog = "ofastlylog.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# Allows pypi uploads. ref: https://github.com/ofek/hatch-vcs/discussions/12
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]
